Auto-open mac screen recording settings

--- a/renderer/permission/index.html
+++ b/renderer/permission/index.html
@@ -10,8 +10,9 @@
     <main>
       <h1>Enable Screen Recording</h1>
       <p>
-        Neptune needs screen recording permission to capture your desktop. Enable it in
-        System Settings → Privacy &amp; Security → Screen Recording.
+        Neptune needs screen recording permission to capture your desktop. System Settings should
+        open automatically to Privacy &amp; Security → Screen Recording so you can enable access. If it
+        doesn't, use the button below to open it manually.
       </p>
       <div class="actions">
         <button id="settings">Open System Settings</button>
