--- a/renderer/overlay/index.html
+++ b/renderer/overlay/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <button id="overlay-button" aria-label="Open copilot chat">
+    <button id="overlay-button" type="button" aria-label="Toggle copilot chat" aria-pressed="false">
       <span class="glow"></span>
       <span class="label">⋯</span>
     </button>
